# cloak-pool

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.browserless.yml  docker-compose.master.yml  docker-compose.worker.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  mapping.py  models.py  nodes.py  pool.py  storage.py  sync.py  ttl_watcher.py  worker.py
app/engines/: __init__.py  browserless.py  cloakbrowser.py
docs/: api.md  database.md
frontend/: index.html  package-lock.json  package.json  view.html  vite.config.js  vnc.html
frontend/src/: App.jsx  CdpViewer.jsx  CreateProfileModal.jsx  DefaultsEditor.jsx  LogViewer.jsx  ProfileManager.jsx  VncViewer.jsx  index.css  view-standalone.js  vnc-standalone.js
tests/: test_e2e.py  test_ttl_watcher.py
