[project]
name = "browser-pool"
version = "0.1.0"
description = "Browser Pool Service - CDP scheduling with consumer-profile binding"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "httpx==0.28.1",
    "pydantic==2.10.4",
    "aiosqlite==0.20.0",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "pytest-asyncio==0.24.0", "httpx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
